apollo-federation/src/connectors/json_selection/methods/public/snapshots/every_with_warning_diagnostic.snap
---
source: apollo-federation/src/connectors/json_selection/methods/public/with_warning.rs
expression: report
---
no arguments
  $->withWarning
    [Diagnostic] Method ->withWarning requires exactly one argument, the value to record as the message, got 0

two arguments
  $->withWarning("a", "b")
    [Diagnostic] Method ->withWarning("a", "b") requires exactly one argument, the value to record as the message, got 2

an argument that produces nothing
  $->withWarning(@.nope)
    [Diagnostic] Property .nope not found in object
    [Diagnostic] Method ->withWarning(@.nope) recorded no message because argument @.nope produced no value

a non-string argument, which is serialized rather than refused
  $->withWarning($(42))
    [Diagnostic] 42
